# JPL-Vision

./: tatus
Centurion_2015-master/: README.md
Centurion_2015-master/2015Robot/: build.properties  sysProps.xml
Centurion_2015-master/2015Robot/auton scripts/: 3ToteAutoScript.txt  3ToteAutright.txt  3toteIntake.txt  3toteleftIntake.txt  CanStartv1.txt  CanStartv2.txt  NO MOVEMENT TEST.txt  autonSandbox.txt  driveStraight.txt  nothing.txt
Centurion_2015-master/2015Robot/src/org/team696/Commands/: closeintake.java  navigate.java  openintake.java  setelevator.java  setintake.java  wait.java
Centurion_2015-master/2015Robot/src/org/team696/autonomous/: Command.java  Interpreter.java  Scheduler.java
Centurion_2015-master/2015Robot/src/org/team696/baseClasses/: CustomPID.java  Runnable.java  (+2 more)
mjpg-streamer-master/: README.md
mjpg-streamer-master/mjpg-streamer-experimental/: CMakeLists.txt  Makefile  mjpg_streamer.h  start_696.sh
mjpg-streamer-master/mjpg-streamer-experimental/plugins/input_raspicam_696/: CMakeLists.txt  detect_color_blobs.c  detect_color_blobs.h  get_ip_addr_str.c  get_ip_addr_str.h  get_usecs.h  input_raspicam_696.c  log_error.h  overwrite_tif_tags.c  overwrite_tif_tags.h  tcp_comms.c  tcp_comms.h  udp_comms.c  udp_comms.h  yuv420.c  yuv420.h  yuv_color_space_image.c  yuv_color_space_image.h
mjpg-streamer-master/mjpg-streamer-experimental/plugins/input_raspicam_696/test/: convert_jpg_to_yuv.c  convert_yuv_to_jpg.c  detect_color_blobs_main.c  jpeg_file_io.c  jpeg_file_io.h  make.sh  split_yuv.c  test_udp_client.java  yuv_color_space_image_main.c
(+8 files in other folders)
